# src/swagger.json
@@ -1,7 +1,7 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title":"RentalX Documentation",
+    "title":"RentX Documentation",
     "description": "This is an API Rent",
     "Version": "1.0.0",
     "contact":{
@@ -74,5 +74,43 @@
         }
       }
     }
+  },
+  "/specifications": {
+    "post": {
+      "tags": ["Specifications"],
+      "summary": "Create a specification",
+      "description": "Create a new specification",
+      "requestBody": {
+        "content": {
+          "application/json": {
+            "schema": {
+              "$ref": "#/definitions/Specification"
+            }
+          }
+        }
+      },
+      "responses": {
+        "201": {
+          "description": "Created"
+        },
+        "500": {
+          "description": "Specification already exists!"
+        }
+      }
+    }
+  },
+  "definitions": {
+    "Specification": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        }
+      }
+    }
   }
 }
+
